--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -3,48 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best School with Places</title>
+    <title>Best School - Places</title>
     <link rel="stylesheet" type="text/css" href="styles/4-common.css">
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-    <link rel="stylesheet" type="text/css" href="styles/7-places.css">
+    <link rel="stylesheet" type="text/css" href="styles/8-places.css">
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
 </head>
 <body>
 
     <!-- Header -->
     <header>
-        <!-- Header content will be placed here -->
+        <!-- Header content goes here -->
     </header>
 
     <!-- Container -->
     <div class="container">
         <!-- Filters section -->
         <section class="filters">
-            <!-- Filters content will be placed here -->
-            <!-- Search button -->
-            <button>Search</button>
+            <!-- Filter dropdowns and Search button -->
         </section>
 
         <!-- Places section -->
         <section class="places">
             <h1>Places</h1>
             <article>
+                <div class="price_by_night">$80</div>
                 <h2>My home</h2>
+                <div class="information">
+                    <div class="max_guest">2 Guests</div>
+                    <div class="number_rooms">1 Bedroom</div>
+                    <div class="number_bathrooms">1 Bathroom</div>
+                </div>
+                <div class="user">Owner: John Lennon</div>
+                <div class="description">
+                    This is a lovely 1 bedroom and 1 bathroom apartment...
+                </div>
             </article>
-            <article>
-                <h2>Tiny house</h2>
-            </article>
-            <article>
-                <h2>A suite</h2>
-            </article>
+            <!-- Repeat the article block for each place -->
         </section>
     </div>
-
-    <!-- Main Content -->
-    <main>
-        <!-- Additional main content will be placed here -->
-    </main>
 
     <!-- Footer -->
     <footer>
